--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
                         <div class="item p-2">
                             <div class="feature-single">
                                 <img src="images/education.png" alt="education">
-                                <h6>Tuition</h6>
+                                <h6>CRASH COURSE- MED/ENGG</h6>
                                 <p>Starts on April 15th Course for 1 year with half of the syllabus cover during vacation.
                                 </p>
                                 <!--                                <div class="arrow">-->
@@ -156,7 +156,7 @@
                         <div class="item p-2">
                             <div class="feature-single">
                                 <img src="images/knowledge.png" alt="education">
-                                <h6>Entrance</h6>
+                                <h6>REPEATERS BATCH – MED/ENGG</h6>
                                 <p>Repeaters batch of 2020, class starts on june 8th.</p>
                                 <!--                                <div class="arrow">-->
                                 <!--                                    <a href="#"><i class="fas fa-arrow-right"></i></a>-->
@@ -166,8 +166,38 @@
                         <div class="item p-2">
                             <div class="feature-single">
                                 <img src="images/manager.png" alt="education">
-                                <h6>IAS Coaching</h6>
-                                <p>+one - year tuition from april 15 comprehensive coverage of syllabus.</p>
+                                <h6>CIVIL SERVICE COACHING</h6>
+                                <p>plus one - year tuition from april 15 comprehensive coverage of syllabus.</p>
+                                <!--                                <div class="arrow">-->
+                                <!--                                    <a href="#"><i class="fas fa-arrow-right"></i></a>-->
+                                <!--                                </div>-->
+                            </div>
+                        </div>
+                        <div class="item p-2">
+                            <div class="feature-single">
+                                <img src="images/education.png" alt="education">
+                                <h6>TUITION + ENTRANCE FOR PLUS ONE</h6>
+                                <p>Starts on April 15th Course for 1 year with half of the syllabus cover during vacation.</p>
+                                <!--                                <div class="arrow">-->
+                                <!--                                    <a href="#"><i class="fas fa-arrow-right"></i></a>-->
+                                <!--                                </div>-->
+                            </div>
+                        </div>
+                        <div class="item p-2">
+                            <div class="feature-single">
+                                <img src="images/knowledge.png" alt="education">
+                                <h6>TUITION + ENTRANCE FOR PLUS TWO</h6>
+                                <p>Starts on April 15th Course for 1 year with half of the syllabus cover during vacation.</p>
+                                <!--                                <div class="arrow">-->
+                                <!--                                    <a href="#"><i class="fas fa-arrow-right"></i></a>-->
+                                <!--                                </div>-->
+                            </div>
+                        </div>
+                        <div class="item p-2">
+                            <div class="feature-single">
+                                <img src="images/education.png" alt="education">
+                                <h6>CRASH COURSE FOR KAS </h6>
+                                <p>Starts on April 15th Course for 1 year with half of the syllabus cover during vacation.</p>
                                 <!--                                <div class="arrow">-->
                                 <!--                                    <a href="#"><i class="fas fa-arrow-right"></i></a>-->
                                 <!--                                </div>-->
