--- a/index.html
+++ b/index.html
@@ -240,9 +240,9 @@
             <p class="mb-5">Presenting the toppers of our institute... </p>
 
             <header class="tabs-nav buttons mb-5">
-                <a href="#" class="achiever-active t1">Plus Two</a>
-                <a href="#" class="achiever-active t2">ENGG</a>
-                <a href="#" class="achiever-active t3 no-border">UPSE</a>
+                <a href="#" class="achiever-active t1">MBBS</a>
+                <a href="#" class="achiever-active t2">BDS</a>
+                <a href="#" class="achiever-active t3 no-border">BAMS</a>
             </header>
 
             <section class="tabs-content">
