--- a/index.html
+++ b/index.html
@@ -120,12 +120,12 @@
                     <img src="images/logo.jpg" alt="home-logo">
                 </div>
                 <div class="links">
-                    <a href="#">Home</a>
-                    <a href="#">About Us</a>
-                    <a href="#">Courses</a>
-                    <a href="#">News</a>
-                    <a href="#">Gallery</a>
-                    <a href="#">Contact Us</a>
+                    <a href="index.html">Home</a>
+                    <a href="about.html">About Us</a>
+                    <a href="courses.html">Courses</a>
+                    <a href="news.html">News</a>
+                    <a href="gallery.html">Gallery</a>
+                    <a href="contact.html">Contact Us</a>
                 </div>
                 <div class="contact-home-bg">
                     <small>Call Now at</small>
