--- a/about.html
+++ b/about.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="about.html">About Us</a>
@@ -127,7 +127,7 @@
             <div class="col-md-8 px-0 pr-md-4">
                 <h2 class="mt-4">Christ College</h2>
                 <h6>More About Us</h6>
-                <p class="mt-4 mb-4">Christ College an institute of extra-ordinary excellence with unparalleled success rate from students who secured average marks at school level, is set in her pristine Campus in Thumpoly, Alappuzha. The ride history of the institute holds
+                <p class="mt-5 mb-4">Christ College an institute of extra-ordinary excellence with unparalleled success rate from students who secured average marks at school level, is set in her pristine Campus in Thumpoly, Alappuzha. The ride history of the institute holds
                     good stead in understanding its credibility. Trustable results in NEET UG/ Medical entrance exams and unique pedagogy over the year have made Christ, a household name in 2019, institute ventured out into new pastures to ignite civil
                     service dreams among the aspiring kids and youth of the state.
 
