--- a/courses.html
+++ b/courses.html
@@ -124,18 +124,26 @@
     <!-- About Us -->
 
     <div class="container about py-5">
+        <h2 class="mt-4">Courses We Offer</h2>
+        <h6>We Offer Trainings for</h6>
         <div class="row mx-0">
-            <div class="col-md-8 px-0 pr-md-4">
-                <h2 class="mt-4">Christ College</h2>
-                <h6>More About Us</h6>
-                <p class="mt-5 mb-4">Christ College an institute of extra-ordinary excellence with unparalleled success rate from students who secured average marks at school level, is set in her pristine Campus in Thumpoly, Alappuzha. The ride history of the institute holds
-                    good stead in understanding its credibility. Trustable results in NEET UG/ Medical entrance exams and unique pedagogy over the year have made Christ, a household name in 2019, institute ventured out into new pastures to ignite civil
-                    service dreams among the aspiring kids and youth of the state.
-
-                    <br><br> We are committed to our values of humility and service while inspiring people to push their limits and conquer the inimitable heights of glory.</p>
+            <div class="col-md-7 pl-md-0">
+                <p class="mt-4 mb-4">
+                    <li style="list-style: circle;">CIVIL SERVICE COACHING </li>
+                    <li style="list-style: circle;">MED/ENGG - CRASH COURSE</li>
+                    <li style="list-style: circle;">MED/ENGG - REPEATERS BATCH</li>
+                    <li style="list-style: circle;">TUITION + ENTRANCE FOR PLUS ONE </li>
+                    <li style="list-style: circle;">TUITION + ENTRANCE FOR PLUS TWO </li>
+                    <li style="list-style: circle;">CRASH COURSE FOR KAS </li>
+                </p>
+                <h5 class="mt-5">IGNITE 𝟐𝐊𝟐𝟎 𝐒𝐔𝐌𝐌𝐄𝐑 𝐂𝐀𝐌𝐏 𝐅𝐎𝐑 𝐅𝐔𝐓𝐔𝐑𝐄 𝐋𝐄𝐀𝐃𝐄𝐑𝐒 - CIVIL 𝐒𝐄𝐑𝐕𝐈𝐂𝐄 𝐕𝐀𝐂𝐀𝐓𝐈𝐎𝐍 𝐂𝐋𝐀𝐒𝐒𝐄𝐒 𝐅𝐎𝐑 𝐒𝐂𝐇𝐎𝐎𝐋 𝐒𝐓𝐔𝐃𝐄𝐍𝐓𝐒</h5>
+                <h6 class="mt-5"><b>About UPSC Civil Service Examination</b></h6>
+                <p class="mt-3">UPSC Civil Services Examination is conducted for recruitment to 24 Services and Posts in accordance with the Rules published by the Department of Personnel Training. The recruitment to Indian Forest Service is also done through Civil Services
+                    (Preliminary) Exam. However, the Mains Exam and Personality Test are conducted separately for Indian Forest Service recruitment. Plan of Examination and Eligibility Conditions are also similar for both examinations, except a few differences.</p>
+                <a class="btn btn-info" href="images/Civil Service.docx" download="Christ Civil Service Academy">Download Brouchure</a>
             </div>
-            <div class="col-md-4 pl-md-4 middler">
-                <img class="w-100" src="images/teach.svg" alt="">
+            <div class="col-md-5 pr-md-0">
+                <img class="w-100 mt-3" src="images/FB Poster Civil Service.jpg" alt="">
             </div>
         </div>
     </div>
