--- a/index.html
+++ b/index.html
@@ -74,10 +74,9 @@
                 <a href="#"><i class="fas fa-share-alt"></i></a>
                 <a href="#">OUR SOCIAL</a>
                 <div class="icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="https://www.facebook.com/Christcollegethumpolly/"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/christcollege.alpy/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/channel/UCrJ-qoRCq9TWm-65RVdh1Sg"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="left-details">
@@ -255,7 +254,8 @@
                                 </div>
                                 <h6>Silpha Mariya Augustein
                                 </h6>
-                                <p>93%
+                                <p>Mount Zion Medical College, Adoor
+
                                 </p>
                             </div>
                         </div>
@@ -266,7 +266,8 @@
                                 </div>
                                 <h6>Minto
                                 </h6>
-                                <p>91%</p>
+                                <p>Believers Church Medical College,Thiruvalla
+                                </p>
                             </div>
                         </div>
                         <div class="col-6 col-md-4 col-lg-3 p-2">
@@ -276,7 +277,8 @@
                                 </div>
                                 <h6>Anila K S
                                 </h6>
-                                <p>98.7%</p>
+                                <p>Kozhikode Malabar Medical College
+                                </p>
                             </div>
                         </div>
                         <div class="col-6 col-md-4 col-lg-3 p-2">
@@ -286,7 +288,8 @@
                                 </div>
                                 <h6>Anusha Sebastian
                                 </h6>
-                                <p>86%</p>
+                                <p>Gulberg ESI, Karnataka
+                                </p>
                             </div>
                         </div>
                         <div class="col-6 col-md-4 col-lg-3 p-2">
@@ -296,7 +299,8 @@
                                 </div>
                                 <h6>Amal Anto
                                 </h6>
-                                <p>98.5%</p>
+                                <p>Believers Church Medical College,Thiruvalla
+                                </p>
                             </div>
                         </div>
                         <div class="col-6 col-md-4 col-lg-3 p-2">
@@ -306,7 +310,8 @@
                                 </div>
                                 <h6>Aleesha P J
                                 </h6>
-                                <p>87%</p>
+                                <p>Amala Institute of Medical Science, Thrissure
+                                </p>
                             </div>
                         </div>
                         <div class="col-6 col-md-4 col-lg-3 p-2">
@@ -316,7 +321,8 @@
                                 </div>
                                 <h6>Shinu Gabriel
                                 </h6>
-                                <p>87%</p>
+                                <p>DM WIMS ,Wayanad
+                                </p>
                             </div>
                         </div>
                         <div class="col-6 col-md-4 col-lg-3 p-2">
@@ -326,17 +332,8 @@
                                 </div>
                                 <h6>Anna Maria V Shaji
                                 </h6>
-                                <p>93%</p>
-                            </div>
-                        </div>
-                        <div class="col-6 col-md-4 col-lg-3 p-2">
-                            <div class="avatar">
-                                <div class="face-img">
-                                    <img src="images/achievers/30.jpg">
-                                </div>
-                                <h6>Aswini Krishna
-                                </h6>
-                                <p>92%</p>
+                                <p>DM WIMS ,Wayanad
+                                </p>
                             </div>
                         </div>
                     </div>
@@ -513,10 +510,9 @@
                         </form>
                         <h6 class="mb-4"><strong>follow us</strong></h6>
                         <div class="links">
-                            <a href="#" class="text-success"><i class="fab fa-facebook"></i></a>
-                            <a href="#" class="text-success"><i class="fab fa-instagram"></i></a>
-                            <a href="#" class="text-success"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" class="text-success"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.facebook.com/Christcollegethumpolly/"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/christcollege.alpy/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/channel/UCrJ-qoRCq9TWm-65RVdh1Sg"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
                 </div>
