--- a/contact.html
+++ b/contact.html
@@ -74,10 +74,9 @@
                 <a href="#"><i class="fas fa-share-alt"></i></a>
                 <a href="#">OUR SOCIAL</a>
                 <div class="icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-twitter"></i></a>
-                    <a href="#"><i class="fab fa-linkedin"></i></a>
-                    <a href="#"><i class="fab fa-pinterest"></i></a>
+                    <a href="https://www.facebook.com/Christcollegethumpolly/"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/christcollege.alpy/"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.youtube.com/channel/UCrJ-qoRCq9TWm-65RVdh1Sg"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
             <div class="left-details">
@@ -205,10 +204,9 @@
                         </form>
                         <h6 class="mb-4"><strong>follow us</strong></h6>
                         <div class="links">
-                            <a href="#" class="text-success"><i class="fab fa-facebook"></i></a>
-                            <a href="#" class="text-success"><i class="fab fa-instagram"></i></a>
-                            <a href="#" class="text-success"><i class="fab fa-linkedin"></i></a>
-                            <a href="#" class="text-success"><i class="fab fa-youtube"></i></a>
+                            <a href="https://www.facebook.com/Christcollegethumpolly/"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.instagram.com/christcollege.alpy/"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.youtube.com/channel/UCrJ-qoRCq9TWm-65RVdh1Sg"><i class="fab fa-youtube"></i></a>
                         </div>
                     </div>
                 </div>
